--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -23,22 +22,37 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
 
-        <springwebmvc.version>5.1.0.RELEASE</springwebmvc.version>
-        <springcontext.version>5.0.8.RELEASE</springcontext.version>
-        <springsecurity.version>3.1.0.RELEASE</springsecurity.version>
-        <mongodb.version>2.1.0.RELEASE</mongodb.version>
-        <jackson.version>2.9.4</jackson.version>
+        <spring-webmvc.version>5.1.3.RELEASE</spring-webmvc.version>
+        <spring-context.version>5.1.3.RELEASE</spring-context.version>
+        <spring-aop.version>5.1.3.RELEASE</spring-aop.version>
+        <spring-web.version>5.1.3.RELEASE</spring-web.version>
+        <spring-core.version>5.1.3.RELEASE</spring-core.version>
+        <javax-servlet-api.version>3.0.1</javax-servlet-api.version>
+
+        <spring-data-mongodb.version>2.1.0.RELEASE</spring-data-mongodb.version>
+        <spring-data-redis.version>1.7.10.RELEASE</spring-data-redis.version>
+
+        <jackson-databind.version>2.9.8</jackson-databind.version>
         <lombok.version>1.18.2</lombok.version>
-        <orika.version>1.5.2</orika.version>
-        <javaxservletapi.version>3.1.0</javaxservletapi.version>
-        <commonsfileupload.version>1.3.3</commonsfileupload.version>
+        <orika-core.version>1.5.2</orika-core.version>
+
+        <spring-session.version>1.3.4.RELEASE</spring-session.version>
+        <spring-session-data-redis.version>2.1.2.RELEASE</spring-session-data-redis.version>
+        <jedis.version>2.9.0</jedis.version>
+        <lettuce-core.version>5.1.3.RELEASE</lettuce-core.version>
+        <lettuce.version>3.5.0.Final</lettuce.version>
+
+        <spring-security-crypto.version>3.1.0.RELEASE</spring-security-crypto.version>
+        <spring-security-core.version>5.1.2.RELEASE</spring-security-core.version>
+        <spring-security-web.version>5.1.2.RELEASE</spring-security-web.version>
+        <spring-security-config.version>5.1.2.RELEASE</spring-security-config.version>
+
+        <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <itextpdf.version>5.5.13</itextpdf.version>
-        <slf4j.version>1.7.25</slf4j.version>
+
+        <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
         <slf4j-api.version>1.7.25</slf4j-api.version>
         <log4j.version>1.2.17</log4j.version>
-        <springdataredis.version>2.0.3.RELEASE</springdataredis.version>
-        <jedis.version>2.9.0</jedis.version>
-        <springsessionredis.version>2.1.2.RELEASE</springsessionredis.version>
     </properties>
 
     <repositories>
@@ -54,16 +68,54 @@
 
     <dependencyManagement>
         <dependencies>
-            <!--External Dependency-->
+            <!--External Dependencies-->
             <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-crypto</artifactId>
-                <version>${springsecurity.version}</version>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${spring-webmvc.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring-context.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring-aop.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring-web.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${javax-servlet-api.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-mongodb</artifactId>
-                <version>${mongodb.version}</version>
+                <version>${spring-data-mongodb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-redis</artifactId>
+                <version>${spring-data-redis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson-databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
@@ -73,22 +125,72 @@
             <dependency>
                 <groupId>ma.glasnost.orika</groupId>
                 <artifactId>orika-core</artifactId>
-                <version>${orika.version}</version>
+                <version>${orika-core.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.session</groupId>
+                <artifactId>spring-session</artifactId>
+                <version>${spring-session.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.session</groupId>
+                <artifactId>spring-session-data-redis</artifactId>
+                <version>${spring-session-data-redis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>io.lettuce</groupId>
+                <artifactId>lettuce-core</artifactId>
+                <version>${lettuce-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>biz.paluch.redis</groupId>
+                <artifactId>lettuce</artifactId>
+                <version>${lettuce.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-crypto</artifactId>
+                <version>${spring-security-crypto.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-core</artifactId>
+                <version>${spring-security-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+                <version>${spring-security-web.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-config</artifactId>
+                <version>${spring-security-config.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>commons-fileupload</groupId>
                 <artifactId>commons-fileupload</artifactId>
-                <version>${commonsfileupload.version}</version>
+                <version>${commons-fileupload.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.itextpdf</groupId>
                 <artifactId>itextpdf</artifactId>
                 <version>${itextpdf.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>${slf4j.version}</version>
+                <version>${slf4j-log4j12.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -100,19 +202,8 @@
                 <artifactId>log4j</artifactId>
                 <version>${log4j.version}</version>
             </dependency>
-            <dependency>
-                <groupId>redis.clients</groupId>
-                <artifactId>jedis</artifactId>
-                <version>${jedis.version}</version>
-                <type>jar</type>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-core</artifactId>
-                <version>5.1.3.RELEASE</version>
-            </dependency>
 
-            <!--Module Dependency-->
+            <!--Module Dependencies-->
             <dependency>
                 <groupId>com.oasis</groupId>
                 <artifactId>model</artifactId>
@@ -138,83 +229,10 @@
                 <artifactId>web-model</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
-
-
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-redis</artifactId>
-                <version>1.7.10.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-aop</artifactId>
-                <version>5.1.3.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
-                <version>5.1.3.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>5.1.3.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-core</artifactId>
-                <version>5.1.2.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-web</artifactId>
-                <version>5.1.2.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>3.0.1</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>io.lettuce</groupId>
-                <artifactId>lettuce-core</artifactId>
-                <version>5.1.3.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>biz.paluch.redis</groupId>
-                <artifactId>lettuce</artifactId>
-                <version>3.5.0.Final</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-webmvc</artifactId>
-                <version>5.1.3.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-config</artifactId>
-                <version>5.1.2.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>2.9.8</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.session</groupId>
-                <artifactId>spring-session</artifactId>
-                <version>1.3.4.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.session</groupId>
-                <artifactId>spring-session-data-redis</artifactId>
-                <version>2.1.2.RELEASE</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <build>
-        <finalName>OASIS</finalName>
+        <finalName>oasis</finalName>
     </build>
 </project>
