--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <spring-test.version>5.0.8.RELEASE</spring-test.version>
         <junit.version>4.12</junit.version>
         <mockito-all.version>1.10.19</mockito-all.version>
+        <spring-security-test.version>5.1.2.RELEASE</spring-security-test.version>
 
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
         <itextpdf.version>5.5.13</itextpdf.version>
@@ -198,6 +199,12 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-all</artifactId>
                 <version>${mockito-all.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-test</artifactId>
+                <version>${spring-security-test.version}</version>
                 <scope>test</scope>
             </dependency>
 
